--- a/src/pages/servicing-orders/ServicingOrdersView.scss
+++ b/src/pages/servicing-orders/ServicingOrdersView.scss
@@ -1,16 +1,9 @@
 // @import '@atlaskit/css-reset'; // TODO: This needs to be added to global when legacy components are removed
-@import '../../styles/atlaskit/reset.scss';
-@import '../../styles/config';
-@import '../../styles/mixins';
+@import '../../styles/atlaskit/mixins';
 
 .nexus-c-servicing-orders {
     height: 100%;
-    @include addSpace('padding', 6);
-
-    &__title {
-        font-size: 29px;
-        color: map-get($colors, nexus-title-color);
-    }
+    @include addSpacing('padding', 6);
 
     &__external-filters {
         display: flex;
@@ -19,33 +12,12 @@
         margin-right: 1rem;
 
         button {
-            margin-left: 5px;
-            margin-right: 5px;
+            @include margin(0, 1);
         }
     }
 
     &__customer-filter {
-        width: 200px;
-        margin-left: 5px;
-        margin-right: 5px;
-        &--label {
-            color: #a5adba;
-            margin-bottom: 10px;
-        }
-        &--select {
-            height: 30px;
-            display: flex;
-            width: 100%;
-            justify-content: space-between;
-            align-items: center;
-            border: 0;
-            > div {
-                width: 100%;
-                border: 0;
-            }
-            input {
-                height: 30px;
-            }
-        }
+        @include margin(0, 1);
+        @include addSpacing('width', 50);
     }
 }
