PORT-3116 adding css to prevent error message from stretching ingests width

--- a/src/pages/avails/ingest-panel/components/ingest-report/IngestReport.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-report/IngestReport.scss
@@ -44,5 +44,8 @@
         font-size: 11px;
         color: #de350b;
         margin: 10px 0 0 5px;
+        /*Added for PORT-3116*/
+        width: 0;
+        min-width: 100%;
     }
 }
