--- a/src/pages/legacy/containers/avail/details/RightDetails.scss
+++ b/src/pages/legacy/containers/avail/details/RightDetails.scss
@@ -56,6 +56,7 @@
     padding: 0.75rem 1.25rem;
     display: flex;
     flex-direction: column;
+    margin-bottom: 10px;
     &__start-date,
     &__end-date {
         width: 100%;
