PORT-3116 fixing css in manual rights entry page

--- a/src/pages/legacy/containers/avail/create/ManualRightsEntry/ManualRighstEntry.scss
+++ b/src/pages/legacy/containers/avail/create/ManualRightsEntry/ManualRighstEntry.scss
@@ -75,6 +75,8 @@
 
 .nexus-c-attachment-error-old {
     padding-left: 10px;
+    padding-top: 5px;
+    line-height: normal !important;
 }
 
 .nexus-c-attachment-error-old__icon {
