PORT-3173 event management table safari fix, refactor using new styleguide

--- a/src/pages/event-management/components/event-management-table/EventManagementTable.scss
+++ b/src/pages/event-management/components/event-management-table/EventManagementTable.scss
@@ -1,5 +1,11 @@
 @import '../../../../styles/atlaskit/mixins';
 
+.nexus-c-event-management-table__wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .nexus-c-event-management-table {
     height: 100%;
     display: flex;
