--- a/src/pages/event-management/EventManagement.scss
+++ b/src/pages/event-management/EventManagement.scss
@@ -1,20 +1,27 @@
+@import '../../styles/config.scss';
+@import '../../styles/atlaskit/mixins';
+
 .nexus-c-event-management {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  padding: 24px 0 0;
-  &__title {
-    font-size: 29px;
-    padding: 0 22px;
-    color: #42526E;
-  }
-  &__table {
+    display: flex;
+    flex-direction: column;
+    height: calc(100% - 50px);
+    @include padding(6, 0, 0, 0);
+}
+
+.nexus-c-event-management__title {
+    @include heading(h900);
+    @include margin(0);
+    @include padding(0, 6);
+    color: map-get($colors, nexus-title-color);
+}
+
+.nexus-c-event-management__table {
     width: 100%;
     height: 100%;
-    padding: 24px 24px 45px 24px;
+    height: 100%;
+    @include padding(6);
 
     & .nexus-c-nexus-grid {
-      height: 100%;
+        height: 100%;
     }
-  }
 }
