--- a/src/pages/avails/right-matching/right-to-match/RightToMatchView.scss
+++ b/src/pages/avails/right-matching/right-to-match/RightToMatchView.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     flex: 2;
     padding-top: 20px;
+    min-height: 0;
     & .ag-root-wrapper {
         min-height: 180px;
     }
