PORT-3172 fixing issue with ag grid's sidebar date pickers in safari

--- a/src/ui/elements/nexus-date-and-time-elements/nexus-date-time-window-picker/NexusDateTimeWindowPicker.scss
+++ b/src/ui/elements/nexus-date-and-time-elements/nexus-date-time-window-picker/NexusDateTimeWindowPicker.scss
@@ -1,3 +1,4 @@
+/* REMOVED: Unused styles, see CustomDateFilter.scss
 .nexus-c-date-time-window-picker {
     display: grid;
     grid-template-columns: 7fr 7fr 4fr;
@@ -14,3 +15,4 @@
     grid-row: 1;
     grid-column: 1/-1;
 }
+*/
