--- a/src/pages/event-management/EventManagement.scss
+++ b/src/pages/event-management/EventManagement.scss
@@ -4,20 +4,19 @@
 .nexus-c-event-management {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 50px);
+    height: 100%;
     @include padding(6, 0, 0, 0);
 }
 
 .nexus-c-event-management__title {
-    @include heading(h900);
-    @include margin(0);
-    @include padding(0, 6);
-    color: map-get($colors, nexus-title-color);
+    font-size: 29px;
+    padding: 0 22px;
+    color: #172b4d;
+    height: 0;
 }
 
 .nexus-c-event-management__table {
     width: 100%;
-    height: 100%;
     height: 100%;
     @include padding(6);
 
