--- a/src/pages/event-management/components/event-management-table/EventManagementTable.scss
+++ b/src/pages/event-management/components/event-management-table/EventManagementTable.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    @include padding(10, 0, 0, 0);
 }
 
 .nexus-c-event-management-table {
