--- a/src/pages/avails/ingest-panel/components/ingest-report/IngestReport.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-report/IngestReport.scss
@@ -12,7 +12,6 @@
     }
 
     &__field {
-        // user-select: none;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -28,6 +27,10 @@
 
         &--is-selectable {
             cursor: pointer;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 
