--- a/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
@@ -2,9 +2,8 @@
 @import '../../../../styles/atlaskit/colors';
 
 .nexus-c-field {
-    .nexus-c-field__label,
-    .nexus-c-field__value {
-        display: inline-block;
+    .doxtck {
+        display: flex;
     }
 
     .nexus-c-field__value {
