PORT-3178 SavedTableDropdown component setup, header styling

--- a/src/pages/dop-tasks/components/dop-tasks-header/DopTasksHeader.scss
+++ b/src/pages/dop-tasks/components/dop-tasks-header/DopTasksHeader.scss
@@ -1,13 +1,14 @@
 @import '../../../../styles/atlaskit/mixins';
 @import '../../../../styles/atlaskit/colors';
 
-.dop-tasks-header {
+.nexus-c-dop-tasks-header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     @include margin(6);
 }
 
-.dop-tasks-header__label {
+.nexus-c-dop-tasks-header__label {
     font-size: 29px;
     color: map-get($neutrals, N800);
 }
