PORT-3057: Add edit / cancel buttonn

--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -36,3 +36,7 @@
     font-weight: bold;
     border-bottom: 2px solid map-get($neutrals, N40);
 }
+
+.nexus-c-dynamic-form__cancel-button {
+    margin-left: 10px;
+}
