PORT-3057: Add errorValidations from API

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
@@ -2,6 +2,9 @@
 @import '../../../../styles/atlaskit/colors';
 
 .nexus-c-field {
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 5px;
+
     > div {
         display: flex;
     }
@@ -13,5 +16,14 @@
     .nexus-c-field__label {
         width: 25%;
         color: map-get($neutrals, N800);
+    }
+
+    &.nexus-c-field--error {
+        background-color: rgb(242, 222, 222);
+        color: rgb(169, 68, 66);
+
+        .nexus-c-field__label {
+            color: rgb(169, 68, 66);
+        }
     }
 }
