PORT-3057: Add customValidation

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField.scss
@@ -9,8 +9,8 @@
         display: flex;
     }
 
-    .nexus-c-field__value {
-        width: 75%;
+    .nexus-c-field__value-section {
+        width: 100%;
     }
 
     .nexus-c-field__label {
