--- a/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
+++ b/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
@@ -1,9 +1,9 @@
 @import '../../../../../styles/config.scss';
 
 .nexus-c-sources {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 
     &__header {
         display: flex;
@@ -11,6 +11,7 @@
     }
 
     .nexus-c-nexus-grid {
-        width: 17.7rem;  // Just display 1 column
+        width: 17.7rem; // Just display 1 column
+        height: 14rem; // grid height - 5 rows
     }
 }
