--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -10,6 +10,11 @@
     // TODO: Change background color for the app.
     // (Not part of atlaskit's colors, but used as default background)
     background-color: #f2f2f2;
+    z-index: 100;
+}
+
+.nexus-c-dynamic-form__tab-content {
+    z-index: 0;
 }
 
 .nexus-c-dynamic-form__tab {
