--- a/src/pages/dop-tasks/components/dop-tasks-table/DopTasksTable.scss
+++ b/src/pages/dop-tasks/components/dop-tasks-table/DopTasksTable.scss
@@ -2,11 +2,14 @@
 @import '../../../../styles/atlaskit/mixins';
 
 .nexus-c-dop-tasks-table {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     @include padding(6, 6, 10, 6);
 
     & .nexus-c-nexus-grid {
         height: 100%;
+        margin: 0;
     }
 }
