PORT-3274: removing old logic

--- a/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
+++ b/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
@@ -11,7 +11,7 @@
     }
 
     .nexus-c-nexus-grid {
-        width: 17.7rem; // Just display 1 column
+        //width: 17.7rem; // Just display 1 column
         height: 14rem; // grid height - 5 rows
     }
 }
