--- a/src/pages/fallback/ErrorBoundary.scss
+++ b/src/pages/fallback/ErrorBoundary.scss
@@ -1,9 +1,5 @@
 .nexus-c-error {
-    position: absolute;
-    left: 50%;
-    top: 30%;
-    transform: translate(-50%, -50%);
-    padding: 50px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,4 +13,12 @@
     &__message {
         padding: 2px 0px 25px 0px;
     }
+}
+
+#app > .nexus-c-error {
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -50%);
+    padding: 50px;
 }
