PORT-3058: optimise folder structure for nexusfield

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/atlaskit/mixins';
-@import '../../../../styles/atlaskit/colors';
+@import '../../../../../styles/atlaskit/mixins';
+@import '../../../../../styles/atlaskit/colors';
 
 .nexus-c-field {
     padding: 0.75rem 1.25rem;
