--- a/src/ui/elements/nexus-dynamic-form/components/SectionTab/SectionTab.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/SectionTab/SectionTab.scss
@@ -1,5 +1,5 @@
-@import '../../../../styles/atlaskit/mixins';
-@import '../../../../styles/atlaskit/colors';
+@import '../../../../../styles/atlaskit/mixins';
+@import '../../../../../styles/atlaskit/colors';
 
 .nexus-c-section-tab {
     display: flex;
