--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -4,30 +4,13 @@
 .nexus-c-array {
     padding: 0.75rem 1.25rem;
     margin-bottom: 5px;
-
-    > div {
-        display: flex;
+    .nexus-c-array__add {
+        text-align: right;
     }
+}
 
-    .nexus-c-field__value-section {
-        width: 100%;
-    }
-
-    .nexus-c-field__label {
-        width: 25%;
-        color: map-get($neutrals, N800);
-    }
-
-    &.nexus-c-field--error {
-        background-color: rgb(242, 222, 222);
-        color: rgb(169, 68, 66);
-
-        .nexus-c-field__label {
-            color: rgb(169, 68, 66);
-        }
-    }
-
-    .nexus-c-field__placeholder {
-        color: map-get($neutrals, N100);
+.nexus-c-array__modal {
+    .nexus-c-array__modal-buttons {
+        text-align: right;
     }
 }
