PORT-3058: fix tests

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField/components/DateTime/DateTime.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField/components/DateTime/DateTime.scss
@@ -4,10 +4,12 @@
     &__end-date {
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
         & > div:not(.nexus-c-date-time-window-picker__label) {
             flex-grow: 1;
         }
+    }
+    &__start-date {
+        margin-bottom: 20px;
     }
     &__label {
         margin-right: 20px;
