--- a/src/pages/avails/right-details/RightDetails.scss
+++ b/src/pages/avails/right-details/RightDetails.scss
@@ -1,4 +1,6 @@
+@import '../../../styles/atlaskit/colors';
+
 .nexus-c-right-details {
     width: 100%;
-    background-color: #fff;
+    background-color: map-get($neutrals, N0);
 }
