--- a/src/pages/avails/right-details/components/RightDetailsHighlightedField.scss
+++ b/src/pages/avails/right-details/components/RightDetailsHighlightedField.scss
@@ -1,10 +1,13 @@
+@import '../../../../styles/atlaskit/mixins';
+@import '../../../../styles/atlaskit/colors';
+
 .nexus-c-right-details-highlighted-field > p {
-    margin: 0;
+    @include margin(0);
 }
 
 .nexus-c-right-details-highlighted-field__title {
-    color: #a5adba;
+    color: map-get($neutrals, N70);
     font-size: 12px;
     font-weight: bold;
-    margin-bottom: 6px;
+    @include margin(0, 0, 1.5, 0);
 }
