--- a/src/pages/avails/right-details/components/RightDetailsTags.scss
+++ b/src/pages/avails/right-details/components/RightDetailsTags.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/atlaskit/mixins';
+
 .nexus-c-right-details-tags > span {
-    margin-left: 6px;
+    @include margin(0, 0, 0, 1.5);
 }
