--- a/src/pages/avails/right-details/components/RightDetailsTitle.scss
+++ b/src/pages/avails/right-details/components/RightDetailsTitle.scss
@@ -1,7 +1,10 @@
+@import '../../../../styles/atlaskit/mixins';
+@import '../../../../styles/atlaskit/colors';
+
 .nexus-c-right-details-title {
-    margin-right: 12px;
+    @include margin(0, 3, 0, 0);
     font-size: 24px;
-    color: #4b5a74;
+    color: map-get($neutrals, N500);
     > span {
         position: absolute;
         top: 24px;
