--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -14,7 +14,7 @@
     top: 131px;
     // TODO: Change background color for the app.
     // (Not part of atlaskit's colors, but used as default background)
-    background-color: #fff;
+    background-color: map-get($neutrals, N0);
     z-index: 1000;
 }
 
