PORT-3061: Add field rendering

--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -4,6 +4,9 @@
 .nexus-c-array {
     padding: 0.75rem 1.25rem;
     margin-bottom: 5px;
+    .nexus-c-array__field div {
+        display: flex;
+    }
     .nexus-c-array__add {
         text-align: right;
     }
