PORT-3061: Add modal css

--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -23,8 +23,18 @@
         padding: 25px;
         margin-top: 15px;
     }
-    .nexus-c-array__field.nexus-c-array__field-bold {
-        font-weight: bold;
+    .nexus-c-array__field {
+        &.nexus-c-array__field-bold {
+            font-weight: bold;
+        }
+        &.nexus-c-array__field-inline,
+        &.nexus-c-array__field-bold {
+            .nexus-c-field {
+                > div {
+                    display: flex;
+                }
+            }
+        }
     }
 }
 
