--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -10,12 +10,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: sticky;
+    position: fixed;
     top: 131px;
     // TODO: Change background color for the app.
     // (Not part of atlaskit's colors, but used as default background)
     background-color: map-get($neutrals, N0);
-    z-index: 1000;
+    z-index: 1;
+}
+
+.nexus-c-dynamic-form__tab-content {
+    @include padding(48, 0, 0, 0);
 }
 
 .nexus-c-dynamic-form__tab {
@@ -49,7 +53,7 @@
     position: absolute;
     top: 24px;
     right: 24px;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .nexus-c-dynamic-form__submit-button {
