--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -7,6 +7,7 @@
 }
 
 .nexus-c-dynamic-form__tab-container {
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: center;
