--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -4,6 +4,12 @@
 .nexus-c-array {
     padding: 0.75rem 1.25rem;
     margin-bottom: 5px;
+    .nexus-c-array__remove-button {
+        cursor: pointer;
+        position: absolute;
+        right: 8px;
+        top: 8px;
+    }
     .nexus-c-array__add {
         text-align: right;
     }
@@ -17,6 +23,7 @@
             flex: 0 32.5%;
             border: 1px solid map-get($light-neutral-colors, light-neutral-1);
             box-sizing: border-box;
+            position: relative;
         }
     }
     .nexus-c-array__object {
