--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -4,6 +4,14 @@
 .nexus-c-array {
     padding: 0.75rem 1.25rem;
     margin-bottom: 5px;
+    &.nexus-c-array--error {
+        background-color: rgb(242, 222, 222);
+        color: rgb(169, 68, 66);
+        .nexus-c-field__label {
+            color: rgb(169, 68, 66);
+        }
+    }
+
     .nexus-c-field__label {
         color: map-get($neutrals, N300);
     }
