PORT-3127 adding logic for highlighted fields

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField/NexusField.scss
@@ -28,6 +28,10 @@
         }
     }
 
+    &.nexus-c-field--highlighted {
+        background-color: map-get($yellows, Y50);
+    }
+
     .nexus-c-field__placeholder {
         color: map-get($neutrals, N100);
     }
