--- a/src/ui/elements/nexus-date-and-time-elements/nexus-date-time-picker/NexusDateTimePicker.scss
+++ b/src/ui/elements/nexus-date-and-time-elements/nexus-date-time-picker/NexusDateTimePicker.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: start;
+    align-items: center;
 
     & > * {
         grid-row: -1;
@@ -17,7 +17,7 @@
 }
 
 .nexus-c-date-time-picker__date-time {
-    flex-grow: 2
+    flex-grow: 2;
 }
 
 .nexus-c-date-time-picker__type-select {
