PORT-3275: hide from STG only

--- a/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
+++ b/src/pages/servicing-orders/servicing-order/components/sources-table/SourcesTable.scss
@@ -15,7 +15,7 @@
     }
 }
 
-.nexus-c-sources_qa {
+.nexus-c-sources_stg {
     // todo remove this class when dete api works ok in QA
     display: flex;
     flex-direction: column;
