--- a/src/pages/avails/right-details/components/RightDetailsHeader.scss
+++ b/src/pages/avails/right-details/components/RightDetailsHeader.scss
@@ -6,6 +6,7 @@
     position: fixed;
     top: 0;
     @include padding(6, 0);
+    transition: padding linear 0.5s;
     background-color: #f2f2f2; //TODO: This is not atlaskit color
     z-index: 1;
 }
