--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -15,6 +15,7 @@
     border-bottom: 1px solid map-get($neutrals, N40);
     position: fixed;
     top: 131px;
+    transition: top linear 0.5s;
     background-color: map-get($neutrals, N0);
     z-index: 1;
 }
