--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -1,10 +1,54 @@
 .picker {
     &__header {
+        margin-top: 10px;
+        b {
+            font-size: 14px;
+        }
+        p {
+            font-size: 12px;
+        }
+    }
+    &__audio-panel {
+        margin-top: 10px;
+        &-table {
+            font-size: 11.5px;
+            margin-top: 10px;
+            height: 290px;
+        }
+    }
+    &__service-panel {
+        padding-top: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-right: 10px;
     }
     &__summary-panel {
         display: flex;
         flex-direction: column;
+        padding: 10px;
+        width: 280px;
+        border-left: 1px solid #bbb;
     }
     &__footer {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 10px;
+        &-buttons {
+            width: 140px;
+            display: flex;
+            justify-content: space-between;
+        }
     }
+    &__select {
+        width: 140px;
+    }
+}
+
+b {
+    font-size: 12px;
+}
+
+hr.solid {
+    border-top: 1px solid #bbb;
 }
