PORT-3276: manipulating arrays and objects for display purpose

--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -10,8 +10,10 @@
     }
     &__audio-panel {
         margin-top: 10px;
+        padding-right: 5px;
+        padding-top: 10px;
         &-table {
-            font-size: 11.5px;
+            font-size: 11px;
             margin-top: 10px;
             height: 290px;
         }
