PORT-3276: check/uncheck all rows and code refactor

--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -8,6 +8,15 @@
             font-size: 12px;
         }
     }
+    &__outer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    &__inner {
+        display: flex;
+        flex-direction: column;
+    }
     &__audio-panel {
         margin-top: 10px;
         padding-right: 5px;
