--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -1,11 +1,15 @@
 .picker {
     &__header {
-        margin-top: 10px;
-        b {
-            font-size: 14px;
-        }
-        p {
-            font-size: 12px;
+        margin-top: 15px;
+        &-title {
+            margin-top: 5px;
+            b {
+                font-size: 13.5px;
+            }
+            p {
+                font-size: 11.5px;
+                margin-top: 1px;
+            }
         }
     }
     &__outer {
