--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -44,6 +44,7 @@
         flex-direction: column;
         padding: 10px;
         width: 280px;
+        //Todo: check for tags and mixins
         border-left: 1px solid #bbb;
     }
     &__selection-panel {
