--- a/src/pages/legacy/containers/avail/create/ManualRightsEntry/ManualRighstEntry.scss
+++ b/src/pages/legacy/containers/avail/create/ManualRightsEntry/ManualRighstEntry.scss
@@ -56,6 +56,10 @@
     }
 }
 
+.nexus-c-attachment {
+    display: flex;
+}
+
 .nexus-c-status-tag-old {
     display: flex;
     justify-content: center;
