--- a/src/ui/elements/nexus-persons-list/elements/DroppableContent.scss
+++ b/src/ui/elements/nexus-persons-list/elements/DroppableContent.scss
@@ -1,8 +1,10 @@
+@import '../../../../styles/atlaskit/colors';
+
 .nexus-c-droppable-content {
     width: 97%;
 }
 
 .nexus-c-droppable-content--dragging {
-    background-color: #bdc3c7;
-    border: 2px dotted #111;
+    background-color: map-get($neutrals, N50);
+    border: 2px dotted map-get($darkModeNeutrals, DN20);
 }
