--- a/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
+++ b/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/atlaskit/colors';
+
 .nexus-c-persons-list {
     min-height: 160px;
 }
@@ -13,11 +15,11 @@
     width: 97%;
 
     &.invalid {
-        border: 2px solid red;
+        border: 2px solid map-get($reds, R400);
     }
 }
 
 .nexus-c-persons-list__add-error {
-    color: #e74c3c;
+    color: map-get($reds, R400);
     font-weight: bold;
 }
