--- a/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
+++ b/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
@@ -8,3 +8,10 @@
 .nexus-c-person-character-container--show {
     @include margin(0, 0, 0, 2.5);
 }
+
+.nexus-c-person-character-container__tag {
+    box-sizing: border-box;
+    display: inline-block;
+    @include padding(1.85);
+    vertical-align: middle;
+}
