--- a/src/ui/elements/nexus-person/NexusPerson.scss
+++ b/src/ui/elements/nexus-person/NexusPerson.scss
@@ -1,20 +1,17 @@
-.nexus-c-person-avatar {
-    width: 30px;
-    height: 30px;
-}
-
-.nexus-c-person-type {
-    margin-left: 10px;
-}
-
-.nexus-c-person-character-container {
+.nexus-c-nexus-person {
+    display: grid;
     width: 100%;
+    grid-template-columns: 42.5% 42.5% 15%;
 }
 
-.nexus-c-person-character {
-    width: 100%;
+.nexus-c-nexus-person__character {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.nexus-c-person-separator {
-    margin-left: 10px;
+.nexus-c-nexus-person__character-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
