--- a/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
+++ b/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
@@ -3,15 +3,9 @@
 .nexus-c-person-character-container {
     display: flex;
     align-items: center;
-}
+    justify-content: flex-start;
 
-.nexus-c-person-character-container--show {
-    @include margin(0, 0, 0, 2.5);
-}
-
-.nexus-c-person-character-container__tag {
-    box-sizing: border-box;
-    display: inline-block;
-    @include padding(1.85);
-    vertical-align: middle;
+    > button {
+        @include padding(0);
+    }
 }
