--- a/src/ui/elements/nexus-person/elements/RemovePerson.scss
+++ b/src/ui/elements/nexus-person/elements/RemovePerson.scss
@@ -2,12 +2,11 @@
 @import '../../../../styles/atlaskit/colors';
 
 .nexus-c-remove-person {
-    @include margin(0, 1.25, 0, 0);
+    @include margin(0);
+    @include padding(0);
     cursor: pointer;
-    position: absolute;
-    right: 45px;
-    top: 6px;
     > span {
+        @include padding(1.28, 0, 0, 0);
         &:hover {
             color: map-get($reds, R400);
         }
