--- a/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
+++ b/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
@@ -5,6 +5,10 @@
     align-items: center;
     justify-content: flex-start;
 
+    > div > span {
+        @include margin(0, 1.25, 0, 0);
+    }
+
     > button {
         @include padding(0);
     }
