--- a/src/ui/elements/nexus-person/NexusPerson.scss
+++ b/src/ui/elements/nexus-person/NexusPerson.scss
@@ -14,4 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    > button {
+        margin: 0;
+        padding: 0;
+    }
 }
