--- a/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
+++ b/src/ui/elements/nexus-person/elements/PersonCharacterContainer.scss
@@ -8,8 +8,13 @@
     > div > span {
         @include margin(0, 1.25, 0, 0);
     }
+}
 
-    > button {
-        @include padding(0);
-    }
+.nexus-c-person-character-container__add {
+    @include padding(0.5);
+    @include margin(0);
+    font-style: italic;
+    background-color: map-get($neutrals, N40);
+    cursor: pointer;
+    border-radius: 5px;
 }
