--- a/src/ui/elements/nexus-person-ro/NexusPersonRO.scss
+++ b/src/ui/elements/nexus-person-ro/NexusPersonRO.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/atlaskit/mixins';
+
 .nexus-c-nexus-person-ro {
     width: 100%;
     display: flex;
@@ -10,6 +12,6 @@
     align-items: center;
     justify-content: flex-start;
     > span {
-        margin-right: 5px;
+        @include margin(0, 1.25, 0, 0);
     }
 }
