--- a/src/ui/elements/nexus-person/NexusPerson.scss
+++ b/src/ui/elements/nexus-person/NexusPerson.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/atlaskit/mixins';
+
 .nexus-c-nexus-person {
     display: grid;
     width: 100%;
@@ -15,7 +17,7 @@
     align-items: center;
     justify-content: flex-end;
     > button {
-        margin: 0;
-        padding: 0;
+        @include margin(0);
+        @include padding(0);
     }
 }
