--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/ComponentsPicker.scss
@@ -13,53 +13,12 @@
             }
         }
     }
-    &__outer {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    &__inner {
-        display: flex;
-        flex-direction: column;
-        //width: 95%;
-    }
-    &__audio-panel {
-        @include margin(3, 0, 0, 0);
-        @include padding(5, 3, 0, 0);
-        &-table {
-            font-size: 0.8rem;
-            @include margin(5, 0, 0, 0);
-            @include addSpacing('height', 75);
-        }
-    }
     &__service-panel {
-        @include padding(3, 3, 0, 0);
+        @include padding(3, 2, 0, 0);
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    }
-    &__summary-panel {
-        display: flex;
-        flex-direction: column;
-        @include addSpacing('padding-left', 2);
-        @include addSpacing('width', 60);
-        //Todo: check for tags and mixins
-        border-left: 1px solid #bbb;
-    }
-    &__list-item {
-        @include addSpacing('padding-top', 1);
-        display: flex;
-        justify-content: space-between;
-        span {
-            font-size: 0.9rem;
-        }
-    }
-    &__selection-panel {
-        display: flex;
-        flex-direction: row;
-        width: 90%;
-        justify-content: space-between;
-        @include padding(3, 0, 0, 0);
+        align-items: center;
     }
     &__footer {
         display: flex;
@@ -74,9 +33,6 @@
             justify-content: space-between;
         }
     }
-    &__select {
-        @include addSpacing('width', 50);
-    }
 }
 
 b {
@@ -84,5 +40,5 @@ b {
 }
 
 hr.solid {
-    border-top: 1px solid #bbb;
+    border-top: 1px solid lightgray;
 }
