PORT-3277: changing audio table key to source channel number

--- a/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/audio-picker/AudioComponentPicker.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/components-picker/audio-picker/AudioComponentPicker.scss
@@ -9,6 +9,7 @@
     &__inner {
         display: flex;
         flex-direction: column;
+        @include addSpacing('width', 150);
     }
     &__audio-panel {
         @include margin(3, 0, 0, 0);
