PORT-3278: Display Dete Error with Tags

--- a/src/ui/elements/nexus-status-tag/StatusTag.scss
+++ b/src/ui/elements/nexus-status-tag/StatusTag.scss
@@ -32,7 +32,8 @@
         background: #ffc400;
     }
 
-    &--fo-not-started {
+    &--fo-not-started,
+    &--ready {
         background: map-get($light-neutral-colors, light-neutral-1);
     }
 
