--- a/src/pages/servicing-orders/servicing-order/components/services-table/ServicesTable.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/ServicesTable.scss
@@ -1,4 +1,5 @@
 @import '../../../../../styles/config.scss';
+@import '../../../../../styles/atlaskit/mixins';
 
 .nexus-c-services-table {
     display: flex;
@@ -52,4 +53,28 @@
         width: 15px;
         cursor: pointer;
     }
+}
+
+.error-list {
+    width: 100%;
+    @include padding(5, 2, 3, 2);
+    &__header {
+        width: 100%;
+    }
+    &__item {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    &__footer {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+}
+
+hr.solid {
+    border-top: 1px solid lightgray;
 }
