--- a/src/pages/avails/bulk-delete/NexusBulkDelete.scss
+++ b/src/pages/avails/bulk-delete/NexusBulkDelete.scss
@@ -45,8 +45,8 @@
 }
 
 .nexus-c-bulk-delete__results {
-    @include addSpacing('max-height', 80);
-    @include addSpacing('height', 80);
+    @include addSpacing('max-height', 60);
+    @include addSpacing('height', 60);
     overflow: auto;
 }
 
@@ -54,6 +54,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    overflow: auto;
 
     button,
     span {
@@ -62,13 +63,10 @@
     }
 }
 
-.nexus-c-bulk-delete__selected-right {
-    width: 50%;
-    height: 100%;
-}
-
-.nexus-c-bulk-delete__affected-rights {
-    width: 50%;
+.nexus-c-bulk-delete__selected-wrapper,
+.nexus-c-bulk-delete__affected-wrapper {
+    display: flex;
+    flex-direction: column;
 }
 
 .nexus-c-bulk-delete__selected-right-id-row,
@@ -119,7 +117,7 @@
 
 .nexus-c-bulk-delete__affected-tpr-label {
     align-self: flex-start;
-    @include padding(1.6, 0, 0, 0);
+    @include padding(2, 0, 0, 0);
 }
 
 .nexus-c-bulk-delete__affected-title,
